--- a/FreePackages/FreePackages.csproj
+++ b/FreePackages/FreePackages.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+      <InternalsVisibleTo Include="FreePackages.Tests" />
+  </ItemGroup>
+
 </Project>
