--- a/FreePackages/FreePackages.csproj
+++ b/FreePackages/FreePackages.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <Authors>Citrinate</Authors>
-    <AssemblyVersion>1.3.2</AssemblyVersion>
+    <AssemblyVersion>1.3.3</AssemblyVersion>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <TargetFramework>net8.0</TargetFramework>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Composition.AttributedModel" Version="*" />
+    <PackageReference Include="System.Composition.AttributedModel" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
