--- a/FreePackages.Tests/FreePackages.Tests.csproj
+++ b/FreePackages.Tests/FreePackages.Tests.csproj
@@ -1,13 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	  <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-	  <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
-	  <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+	  <PackageReference Include="MSTest" />
 	</ItemGroup>
 
 	<ItemGroup>
