--- a/FreePackages/FreePackages.csproj
+++ b/FreePackages/FreePackages.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.ResxSourceGenerator" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" IncludeAssets="compile" />
     <PackageReference Include="System.Composition.AttributedModel" />
   </ItemGroup>
 
